Refactor autolink rule, fix tests, fix transitional data in push notifications